@@ -2,18 +2,21 @@ package com.dbx.agent.dameng;
 
 import com.dbx.agent.ColumnInfo;
 import com.dbx.agent.ObjectInfo;
+import com.dbx.agent.ObjectSource;
 import com.dbx.agent.TableInfo;
 import com.dbx.agent.test.JdbcMetadataSqlFake;
 import com.dbx.agent.test.TestSupport;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
+import java.lang.reflect.Field;
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -43,7 +46,11 @@ class DamengAgentMetadataTest {
             .filter(sql -> sql.contains("ALL_TAB_COMMENTS"))
             .findFirst()
             .orElseThrow();
+        String allTablesSql = String.join("\n", JdbcMetadataSqlFake.statements);
         Assertions.assertTrue(tablesSql.contains("COMMENTS"), tablesSql);
+        Assertions.assertTrue(allTablesSql.contains("ALL_OBJECTS"), allTablesSql);
+        Assertions.assertTrue(allTablesSql.contains("USER_MVIEWS"), allTablesSql);
+        Assertions.assertFalse(allTablesSql.contains("ALL_MVIEWS"), allTablesSql);
         Assertions.assertFalse(tablesSql.contains("ALL_TABLES"), tablesSql);
         Assertions.assertFalse(tablesSql.contains("ALL_VIEWS"), tablesSql);
     }
@@ -70,6 +77,55 @@ class DamengAgentMetadataTest {
         Assertions.assertEquals(1, objects.size());
         Assertions.assertEquals("USERS", objects.get(0).getName());
         Assertions.assertEquals("用户示例表", objects.get(0).getComment());
+    }
+
+    @Test
+    void mapsMaterializedViewsFromMetadata() {
+        DamengAgent agent = new DamengAgent();
+        TestSupport.setPrivateConnection(agent, metadataConnection("id comment", null, true));
+
+        List<TableInfo> tables = agent.listTables("APP");
+        List<ObjectInfo> objects = agent.listObjects("APP");
+
+        Assertions.assertTrue(tables.stream().anyMatch(table ->
+            "USER_SUMMARY_MV".equals(table.getName()) && "MATERIALIZED_VIEW".equals(table.getTable_type())
+        ));
+        Assertions.assertFalse(tables.stream().anyMatch(table ->
+            "USER_SUMMARY_MV".equals(table.getName()) && "VIEW".equals(table.getTable_type())
+        ));
+        Assertions.assertTrue(objects.stream().anyMatch(object ->
+            "USER_SUMMARY_MV".equals(object.getName()) && "MATERIALIZED_VIEW".equals(object.getObject_type())
+        ));
+    }
+
+    @Test
+    void filtersTableListingByRequestedObjectTypes() {
+        DamengAgent agent = new DamengAgent();
+        TestSupport.setPrivateConnection(agent, metadataConnection("id comment", null, true));
+        setConnectedUsername(agent, "APP");
+
+        List<TableInfo> views = agent.listTables("APP", List.of("VIEW"));
+        List<TableInfo> materializedViews = agent.listTables("APP", List.of("MATERIALIZED_VIEW"));
+
+        Assertions.assertTrue(views.stream().noneMatch(table -> "MATERIALIZED_VIEW".equals(table.getTable_type())));
+        Assertions.assertTrue(views.stream().noneMatch(table -> "USER_SUMMARY_MV".equals(table.getName())));
+        Assertions.assertEquals(List.of("USER_SUMMARY_MV"), materializedViews.stream().map(TableInfo::getName).toList());
+    }
+
+    @Test
+    void readsMaterializedViewSourceWithDbmsMetadataType() {
+        DamengAgent agent = new DamengAgent();
+        List<String> params = new ArrayList<>();
+        TestSupport.setPrivateConnection(
+            agent,
+            objectSourceConnection(params, "CREATE MATERIALIZED VIEW \"APP\".\"USER_SUMMARY_MV\" AS SELECT 1 AS ID FROM DUAL")
+        );
+
+        ObjectSource source = agent.getObjectSource("APP", "USER_SUMMARY_MV", "MATERIALIZED_VIEW");
+
+        Assertions.assertEquals(List.of("MATERIALIZED_VIEW", "USER_SUMMARY_MV", "APP"), params);
+        Assertions.assertEquals("MATERIALIZED_VIEW", source.getObject_type());
+        Assertions.assertTrue(source.getSource().contains("CREATE MATERIALIZED VIEW"), source.getSource());
     }
 
     @Test
@@ -110,6 +166,17 @@ class DamengAgentMetadataTest {
     }
 
     @Test
+    void mapsIdentityColumnExtraFromSysColumns() {
+        DamengAgent agent = new DamengAgent();
+        TestSupport.setPrivateConnection(agent, metadataConnection());
+
+        List<ColumnInfo> columns = agent.getColumns("APP", "USERS");
+
+        Assertions.assertEquals(1, columns.size());
+        Assertions.assertEquals("identity", columns.get(0).getExtra());
+    }
+
+    @Test
     void appendsTableAndColumnCommentsToTableDdl() {
         DamengAgent agent = new DamengAgent();
         TestSupport.setPrivateConnection(agent, metadataConnection());
@@ -126,6 +193,10 @@ class DamengAgentMetadataTest {
     }
 
     private static Connection metadataConnection(String allColumnComment, String fallbackColumnComment) {
+        return metadataConnection(allColumnComment, fallbackColumnComment, false);
+    }
+
+    private static Connection metadataConnection(String allColumnComment, String fallbackColumnComment, boolean includeMaterializedView) {
         return proxy(Connection.class, (method, args) -> {
             String name = method.getName();
             if ("prepareStatement".equals(name)) {
@@ -134,6 +205,9 @@ class DamengAgentMetadataTest {
                     return metadataStatement(List.of(List.of("CREATE TABLE \"APP\".\"USERS\" (\n  \"ID\" NUMBER\n);")));
                 }
                 if (sql.contains("ALL_CONS_COLUMNS")) {
+                    return metadataStatement(List.of(List.of("ID")));
+                }
+                if (sql.contains("SYS.SYSCOLUMNS")) {
                     return metadataStatement(List.of(List.of("ID")));
                 }
                 if (sql.startsWith("SELECT COMMENTS")) {
@@ -145,13 +219,40 @@ class DamengAgentMetadataTest {
                 if (sql.contains("SYSCOLUMNCOMMENTS")) {
                     return metadataStatement(List.of());
                 }
-                if (sql.contains("ALL_TAB_COMMENTS")) {
-                    return metadataStatement(List.of(List.of("USERS", "TABLE", "用户示例表")));
+                if (sql.contains("ALL_OBJECTS") && sql.contains("OBJECT_TYPE = 'TABLE'")) {
+                    return metadataStatement(List.of(List.of("USERS", "用户示例表")));
                 }
-                if (sql.contains("ALL_COL_COMMENTS") && !sql.contains("ALL_TAB_COLUMNS")) {
-                    return metadataStatement(List.of());
+                if (sql.contains("ALL_OBJECTS") && sql.contains("OBJECT_TYPE = 'VIEW'")) {
+                    return metadataStatement(
+                        includeMaterializedView
+                            ? List.of(Arrays.asList("USER_SUMMARY_MV", "mv comment"))
+                            : List.of()
+                    );
+                }
+                if (sql.contains("USER_MVIEWS") && sql.contains("ALL_OBJECTS")) {
+                    return metadataStatement(
+                        includeMaterializedView ? List.of(Arrays.asList("USER_SUMMARY_MV", "mv comment")) : List.of()
+                    );
                 }
                 if (sql.contains("ALL_OBJECTS")) {
+                    return metadataStatement(List.of());
+                }
+                if (sql.contains("ALL_TAB_COMMENTS")) {
+                    List<List<Object>> rows = new ArrayList<>();
+                    rows.add(List.of("USERS", "TABLE", "用户示例表"));
+                    if (includeMaterializedView) {
+                        rows.add(Arrays.asList("USER_SUMMARY_MV", "VIEW", "mv comment"));
+                    }
+                    return metadataStatement(rows);
+                }
+                if (sql.contains("USER_MVIEWS")) {
+                    return metadataStatement(
+                        includeMaterializedView
+                            ? List.of(List.of("USER_SUMMARY_MV"))
+                            : List.of()
+                    );
+                }
+                if (sql.contains("ALL_COL_COMMENTS") && !sql.contains("ALL_TAB_COLUMNS")) {
                     return metadataStatement(List.of());
                 }
                 if (sql.contains("ALL_TAB_COLUMNS")) {
@@ -177,13 +278,49 @@ class DamengAgentMetadataTest {
         });
     }
 
+    private static void setConnectedUsername(DamengAgent agent, String username) {
+        try {
+            Field field = DamengAgent.class.getDeclaredField("connectedUsername");
+            field.setAccessible(true);
+            field.set(agent, username);
+        } catch (ReflectiveOperationException e) {
+            throw new IllegalStateException("Unable to set connected username", e);
+        }
+    }
+
+    private static Connection objectSourceConnection(List<String> params, String source) {
+        return proxy(Connection.class, (method, args) -> {
+            String name = method.getName();
+            if ("prepareStatement".equals(name)) {
+                return metadataStatement(List.of(List.of(source)), params);
+            }
+            if ("close".equals(name)) {
+                return null;
+            }
+            if ("isClosed".equals(name)) {
+                return false;
+            }
+            return defaultValue(method.getReturnType());
+        });
+    }
+
     private static PreparedStatement metadataStatement(List<List<Object>> rows) {
+        return metadataStatement(rows, null);
+    }
+
+    private static PreparedStatement metadataStatement(List<List<Object>> rows, List<String> params) {
         return proxy(PreparedStatement.class, (method, args) -> {
             String name = method.getName();
             if ("executeQuery".equals(name)) {
                 return metadataResultSet(rows);
             }
-            if ("setString".equals(name) || "close".equals(name)) {
+            if ("setString".equals(name)) {
+                if (params != null) {
+                    params.add(String.valueOf(args[1]));
+                }
+                return null;
+            }
+            if ("close".equals(name)) {
                 return null;
             }
             return defaultValue(method.getReturnType());
